# data_structures

./: README.md  old_code.cpp
project_1/: CMakeLists.txt  README.md  a.out  main.cpp  visualiser.cpp
project_1/headers/: menu.h  menu_item.h  visualiser.h
project_1/include/structures/: array_list.h  double_linked_list.h  linked_list.h  linked_list_tail.h
project_1/include/utils/: file.h  generator.h  menu.h  node.h
project_1/src/: main.cpp  test_structures.cpp
project_2/: README.md
project_2/include/structures/: heap.h  priority_queue_fibonacciheap.h  priority_queue_heap.h  priority_queue_list.h
project_2/include/utils/: generator.h  node.h
project_2/src/: main.cpp  test_structures.cpp
project_3/: README.md
project_3/include/interface/: hashtable.hpp
project_3/include/structures/hash_tables/: chain_table.hpp  cuckoo_table.hpp  open_addr_table.hpp
project_3/include/structures/other/: linked_list.hpp
project_3/include/utils/: generator.hpp  node.hpp
project_3/src/: main.cpp  test_structures.cpp
